--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 
 
 version = "1.0"
-group = "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+group = "com.zeropoints.ensoulomancy" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "ensoulomancy"
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 compileJava {
@@ -75,11 +75,6 @@ processResources {
         exclude 'mcmod.info'
     }
     
-    rename '(.+_at.cfg)', 'META-INF/$1'
+    
 }
 
-jar {
-    manifest {
-        attributes 'FMLAT': 'sc_at.cfg'
-    }
-}
